--- a/templates/index2.html
+++ b/templates/index2.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Robocup Camera Stream '23</h1>
   <div class="parent">
-    <div><img src="{{ url_for('video_feed1') }}" title="Front Left"></div>
+    <div><img src="{{ url_for('video_feed') }}" title="Front Left"></div>
   </div>
 </body>
 </html>
