--- a/templates/index.html
+++ b/templates/index.html
@@ -35,15 +35,21 @@
 <body>
   <h1>Robocup Camera Stream '23</h1>
   <div class="parent">
-    <div><img src="{{ url_for('video_feed1') }}" title="Front Left"></div>
+    <div><img src="{{ url_for('video_feed1') }}" title="Front Left" id="front_left"></div>
     <div>2</div>
-    <div><img src="{{ url_for('video_feed2') }}" title="Front Right"></div>
+    <div><img src="{{ url_for('video_feed2') }}" title="Front Right" id="front_right"></div>
     <div>4</div>
-    <div><img src="{{ url_for('video_feed0') }}" title="Arm"></div>
+    <div><img src="{{ url_for('video_feed0') }}" title="Arm" id="arm"></div>
     <div>6</div>
     <div>7</div>
-    <div><img src="{{ url_for('video_feed3') }}" title="Center Rear"></div>
+    <div><img src="{{ url_for('video_feed3') }}" title="Center Rear" id="rear"></div>
     <div>9</div>
   </div>
+  <script>
+    function swap(){
+      document.getElementById("rear").src="{{ url_for('video_feed2') }}";
+      document.getElementById("front_right").src="{{ url_for('video_feed3') }}";
+    }
+  </script>
 </body>
 </html>
